Update calculation - better meteo

--- a/_data/villes_tier_1.yml
+++ b/_data/villes_tier_1.yml
@@ -1,24 +1,49 @@
 -
- nom: Clermont-Ferrand
- simplename: clermontferrand
- loyer: 5
+ nom: Lyon
+ simplename: lyon
+ loyer: 3
  animation: 5
  delinquance: 3
- internet: 3
- meteo: 4
+ internet: 5
+ meteo: 5
  transport: 5
  coworking: 5
  rang: 1
- longitude: 45.785649299999996
- latitude: 3.115545429
- population: 141,398
- rentprice: 444€
- timetoparis: 210 minutes
- proportionrestaurants: 7
- 4gcoverage: 95%
+ longitude: 45.77868676
+ latitude: 4.823961127
+ population: 513,275
+ rentprice: 630.38€
+ timetoparis: 131 minutes
+ proportionrestaurants: 9
+ 4gcoverage: 99%
  students: 38%
- minavginternet: 94Gb/s
- nbcoworkings: 7
+ minavginternet: 98Gb/s
+ nbcoworkings: 31
+ temperature: 11.6° 
+ precipitations: 592mm 
+-
+ nom: Bordeaux
+ simplename: bordeaux
+ loyer: 4
+ animation: 5
+ delinquance: 4
+ internet: 4
+ meteo: 4
+ transport: 5
+ coworking: 4
+ rang: 2
+ longitude: 44.85724454
+ latitude: -0.573696781
+ population: 249,712
+ rentprice: 536€
+ timetoparis: 128 minutes
+ proportionrestaurants: 12
+ 4gcoverage: 99%
+ students: 28%
+ minavginternet: 90Gb/s
+ nbcoworkings: 10
+ temperature: 12.7° 
+ precipitations: 694mm 
 -
  nom: Nantes
  simplename: nantes
@@ -27,9 +52,9 @@
  delinquance: 4
  internet: 5
  meteo: 4
- transport: 5
+ transport: 4
  coworking: 5
- rang: 2
+ rang: 3
  longitude: 47.23163568
  latitude: -1.5483100859999999
  population: 303,382
@@ -40,24 +65,5 @@
  students: 37%
  minavginternet: 95Gb/s
  nbcoworkings: 25
--
- nom: Tours
- simplename: tours
- loyer: 4
- animation: 4
- delinquance: 4
- internet: 4
- meteo: 5
- transport: 5
- coworking: 5
- rang: 3
- longitude: 47.39863823
- latitude: 0.6965263759999999
- population: 136,252
- rentprice: 517€
- timetoparis: 84 minutes
- proportionrestaurants: 7
- 4gcoverage: 96%
- students: 44%
- minavginternet: 100Gb/s
- nbcoworkings: 4
+ temperature: 11.6° 
+ precipitations: 657mm 
