--- a/_data/city/villes_tier_2.yml
+++ b/_data/city/villes_tier_2.yml
@@ -1,18 +1,41 @@
 -
+ nom: Nancy
+ simplename: nancy
+ loyer: 5
+ animation: 5
+ delinquance: 3
+ internet: 5
+ meteo: 1
+ transport: 5
+ coworking: 5
+ rang: 4
+ longitude: 48.69019955
+ latitude: 6.175882543999999
+ population: 105,162
+ rentprice: 459€
+ timetoparis: 90 minutes
+ proportionrestaurants: 8
+ 4gcoverage: 98%
+ students: 61%
+ minavginternet: 97Gb/s
+ nbcoworkings: 5
+ temperature: 9.7° 
+ precipitations: 738mm 
+-
  nom: Clermont-Ferrand
  simplename: clermontferrand
  loyer: 5
  animation: 5
  delinquance: 3
- internet: 3
+ internet: 4
  meteo: 4
  transport: 3
  coworking: 5
- rang: 4
+ rang: 5
  longitude: 45.785649299999996
  latitude: 3.115545429
  population: 141,398
- rentprice: 444€
+ rentprice: 436€
  timetoparis: 210 minutes
  proportionrestaurants: 7
  4gcoverage: 95%
@@ -31,11 +54,11 @@
  meteo: 5
  transport: 4
  coworking: 3
- rang: 5
+ rang: 6
  longitude: 47.39863823
  latitude: 0.6965263759999999
  population: 136,252
- rentprice: 517€
+ rentprice: 515€
  timetoparis: 84 minutes
  proportionrestaurants: 7
  4gcoverage: 96%
@@ -54,11 +77,11 @@
  meteo: 4
  transport: 4
  coworking: 4
- rang: 6
+ rang: 7
  longitude: 46.1620644
  latitude: -1.174657028
  population: 75,404
- rentprice: 509.63€
+ rentprice: 505€
  timetoparis: 187 minutes
  proportionrestaurants: 9
  4gcoverage: 99%
@@ -67,6 +90,29 @@
  nbcoworkings: 3
  temperature: 12.6° 
  precipitations: 640mm 
+-
+ nom: Le Mans
+ simplename: lemans
+ loyer: 5
+ animation: 3
+ delinquance: 4
+ internet: 4
+ meteo: 4
+ transport: 4
+ coworking: 3
+ rang: 8
+ longitude: 47.98852567
+ latitude: 0.20003049399999998
+ population: 143,325
+ rentprice: 400€
+ timetoparis: 62 minutes
+ proportionrestaurants: 4
+ 4gcoverage: 96%
+ students: 17%
+ minavginternet: 92Gb/s
+ nbcoworkings: 4
+ temperature: 11.0° 
+ precipitations: 596mm 
 -
  nom: Narbonne
  simplename: narbonne
@@ -77,11 +123,11 @@
  meteo: 5
  transport: 3
  coworking: 4
- rang: 7
+ rang: 9
  longitude: 43.16523999
  latitude: 3.020238687
  population: 53,462
- rentprice: 440€
+ rentprice: 432.5€
  timetoparis: 268 minutes
  proportionrestaurants: 8
  4gcoverage: 95%
@@ -90,29 +136,6 @@
  nbcoworkings: 2
  temperature: 14.9° 
  precipitations: 516mm 
--
- nom: Nancy
- simplename: nancy
- loyer: 4
- animation: 5
- delinquance: 3
- internet: 4
- meteo: 1
- transport: 5
- coworking: 5
- rang: 8
- longitude: 48.69019955
- latitude: 6.175882543999999
- population: 105,162
- rentprice: 462€
- timetoparis: 90 minutes
- proportionrestaurants: 8
- 4gcoverage: 98%
- students: 61%
- minavginternet: 97Gb/s
- nbcoworkings: 5
- temperature: 9.7° 
- precipitations: 738mm 
 -
  nom: Avignon
  simplename: avignon
@@ -123,11 +146,11 @@
  meteo: 5
  transport: 3
  coworking: 4
- rang: 9
+ rang: 10
  longitude: 43.93524483
  latitude: 4.840715725
  population: 92,130
- rentprice: 499.5€
+ rentprice: 500€
  timetoparis: 207 minutes
  proportionrestaurants: 9
  4gcoverage: 99%
@@ -137,48 +160,25 @@
  temperature: 13.7° 
  precipitations: 340mm 
 -
- nom: Le Mans
- simplename: lemans
- loyer: 5
- animation: 3
- delinquance: 4
- internet: 3
- meteo: 4
- transport: 4
- coworking: 3
- rang: 10
- longitude: 47.98852567
- latitude: 0.20003049399999998
- population: 143,325
- rentprice: 392.5€
- timetoparis: 62 minutes
- proportionrestaurants: 4
- 4gcoverage: 96%
- students: 17%
- minavginternet: 92Gb/s
- nbcoworkings: 4
- temperature: 11.0° 
- precipitations: 596mm 
--
- nom: Poitiers
- simplename: poitiers
+ nom: Angers
+ simplename: angers
  loyer: 5
  animation: 4
- delinquance: 3
- internet: 2
+ delinquance: 4
+ internet: 5
  meteo: 4
- transport: 3
- coworking: 5
+ transport: 1
+ coworking: 3
  rang: 11
- longitude: 46.58392077
- latitude: 0.359947653
- population: 87,918
- rentprice: 419€
- timetoparis: 96 minutes
+ longitude: 47.47683742
+ latitude: -0.556125995
+ population: 151,520
+ rentprice: 410€
+ timetoparis: 109 minutes
  proportionrestaurants: 5
- 4gcoverage: 97%
- students: 62%
- minavginternet: 42Gb/s
+ 4gcoverage: 98%
+ students: 48%
+ minavginternet: 100Gb/s
  nbcoworkings: 4
- temperature: 11.3° 
- precipitations: 554mm 
+ temperature: 11.5° 
+ precipitations: 615mm 
